--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.billwi</groupId>
+    <groupId>com.cool00geek</groupId>
     <artifactId>CPMessengerBot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
@@ -27,7 +27,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>com.billwi.Main</mainClass>
+                            <mainClass>com.cool00geek.Main</mainClass>
                         </manifest>
                     </archive>
 
